namespaces/live.cloud-platform.service.justice.gov.uk/workforce-management-preprod/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: workforce-management-preprod
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "preproduction"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "manage_a_workforce_dev"
    cloud-platform.justice.gov.uk/slack-alert-channel: "manage_a_workforce_dev"
    cloud-platform.justice.gov.uk/application: "Workforce Management"
    cloud-platform.justice.gov.uk/owner: "Manage a Workforce: manageaworkforce@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/manage-a-workforce-ui.git"
    cloud-platform.justice.gov.uk/team-name: "manage-a-workforce"
