namespaces/live.cloud-platform.service.justice.gov.uk/workforce-management-preprod/04-networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default
  namespace: workforce-management-preprod
spec:
  podSelector: { }
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector: { }
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-ingress-controllers
  namespace: workforce-management-preprod
spec:
  podSelector: { }
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              component: ingress-controllers
